# JNICheckers

CheckersBack/: Main.h  library.cpp
CheckersBack/Новая папка/: CMakeLists.txt  library.cpp
checkersJNI/src/: Main.java  MainTest.java
